--- a/config.yaml
+++ b/config.yaml
@@ -1,23 +1,20 @@
 cookie:
   expiry_days: 0
-  key: spade
-  name: spade
 credentials:
   usernames:
     pratham:
-      email: pratham001@gmail.com
-      first_name: pratham
-      last_name: rao
+      email: prathamrao001@gmail.com
+      first_name: Pratham
+      last_name: Rao
       logged_in: false
-      password: $2b$12$2iMtJW7WILW3CZfFAIvJ2.lnjyQFFIfR/FZCuDdgBErItn21T/Omi
-      password_hint: retard
+      password: $2b$12$SL7jitCG7q.XwV97rPKlKOVpfYyLbV8iCI5f2nJbEh0olOBFGnJFm
+      password_hint: P1
       roles: null
     rahul:
       email: rahul.j.jacob@gmail.com
-      failed_login_attempts: 0
       first_name: Rahul
       last_name: Jacob
       logged_in: false
-      password: $2b$12$xgrs7yjl1IP0p3rCsbNNtO0gSA65ubRikCct/.Wz0z.8AlDU.Sasy
-pre-authorized:
-  emails: null
+      password: $2b$12$PG5LArZoza0BnL168.4PE.I9Mtft93By/6CcQvz7pfxWUXz7lblWO
+      password_hint: R1
+      roles: null
