--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,7 @@ credentials:
       first_name: Pratham
       last_name: Rao
       logged_in: false
-      password: $2b$12$SL7jitCG7q.XwV97rPKlKOVpfYyLbV8iCI5f2nJbEh0olOBFGnJFm
+      password: $2b$12$0n4lSQf06o/tk.xYBeASBOY5kva.3BFAxfsoiYYwTi5E4Uot7YZ1m
       password_hint: P1
       roles: null
     rahul:
@@ -15,6 +15,6 @@ credentials:
       first_name: Rahul
       last_name: Jacob
       logged_in: false
-      password: $2b$12$PG5LArZoza0BnL168.4PE.I9Mtft93By/6CcQvz7pfxWUXz7lblWO
+      password: $2b$12$g4A/NKrpWqFiwlE8tYnAGeg7ZJHFU3uDl7S0GpNOS8h8xX0m6Z0Gq
       password_hint: R1
       roles: null
